kustomize/naga-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: naga-proxy
spec:
  selector:
    app: naga-proxy
  ports:
    - port: 30013
      protocol: TCP
      targetPort: 80
  externalIPs:
    - 147.45.105.244
  type: LoadBalancer
